# Llama-OS

./: .gitignore  README.md
.github/workflows/: build.yml
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: config.rs  downloader.rs  huggingface.rs  lib.rs  llamacpp_manager.rs  main.rs  models.rs  process.rs  scanner.rs  system_monitor.rs
frontend/: desktop.js  index.html  model-settings-config.json
frontend/css/: chat.css  desktop.css  download.css  huggingface.css  llama-manager.css  loading.css  main.css  modals.css  properties.css  theme.css  windows.css
frontend/modules/: chat-app.js  download-manager.js  huggingface-app.js  llamacpp-manager.js  modal-dialog-examples.js  modal-dialog.js  module-manager.js  properties-manager.js  terminal-manager.js  theme-definitions.js
